--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "meme-generator",
+  "name": "openai-comic-interface",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon --watch . --ext js,mjs,json,html,css server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "openai": "^3.2.1",
+    "path": "^0.12.7"
   }
 }
