--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.36.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "openai": "^3.2.1",
