--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openai-comic-interface",
+  "name": "meme-generator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,6 +17,7 @@
     "cloudinary": "^1.36.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemon": "^3.1.4",
     "openai": "^3.2.1",
     "path": "^0.12.7"
   }
